TestSuite/errors/err0358_named_local_record4.pas
var global: integer;

function p(pa,pb: real): integer;
type int1 = record
      j: T := pa;
    end;
begin
  
end;  
  
begin
end.